# pgnats

./: .gitlab-ci.yml  BACKGROUND_WORKERS_GUIDE.md  BUILD_FIX_GUIDE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  INSTALL.md  QUICKSTART.md  README.md  TEST_RESULTS.md  build.rs  build.sh
.cargo/: config.toml
docs/: 404.html  book.toml  configuration.html  functions.html  index.html  initialization.html  installation.html  linux.html  macos.html  packaging.html  print.html  searcher-c2a407aa.js  searchindex-5eb97b4b.js  toc-4cff11ce.js  toc.html  windows.html
docs/functions/: config.html  key-value.html  meta.html  object-store.html  publish.html  request.html  subscribe.html
docs/src/: SUMMARY.md  configuration.md  functions.md  initialization.md  installation.md  introduction.md  linux.md  macos.md  packaging.md  windows.md
docs/src/functions/: config.md  key-value.md  meta.md  object-store.md  publish.md  request.md  subscribe.md
pkgBuild/ALSE1.7/: control  rules
pkgBuild/ALSE1.8/: control  rules
pkgBuild/ALT/: pgsql-nats.spec
pkgBuild/MOSOS/: pgsql-nats.spec
pkgBuild/RPM/: pgsql-nats.spec
sql/: pgnats--1.0.0--1.1.0.sql
src/: config.rs  ctx.rs  init.rs  nats_client.rs  utils.rs
src/api/: conv.rs  macros.rs  nats.rs
src/bgw/: fdw.rs  mod.rs  notification.rs  ring_queue.rs
src/bgw/launcher/: context.rs  message.rs  mod.rs  pg_api.rs  worker_entry.rs
src/bgw/pgrx_wrappers/: dsm.rs  shm_mq.rs
src/bgw/subscriber/: context.rs  message.rs  mod.rs  nats.rs  pg_api.rs
src/pg_tests/: bgw_tests.rs  macros.rs  shm_mq_tests.rs
