[package]
name = "pgnats"
version = "1.1.0"
edition = "2021"
rust-version = "1.82.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgnats"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14", "kv", "object_store", "sub"]
pg_test = ["warp"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]

# pgrx fork feature
xid8 = ["pgrx/xid8", "pgrx-tests/xid8"]

# extension features
kv = []
object_store = []
sub = ["postcard", "reqwest"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-nats = { version = "0.45.0" }
futures = "0.3.31"
pastey = "0.2.1"
pgrx = { git = "https://github.com/luxms/pgrx", version = "0.15.0", features = [
    "unsafe-postgres",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }

postcard = { optional = true, version = "1.0.0", default-features = false, features = ["use-std"] }
reqwest = { optional = true, version = "0.12.22", default-features = false, features = [
    "json",
    "blocking",
] }

shadow-rs = { version = "1.0.0", default-features = false }

# dev-dependencies
warp = { optional = true, version = "0.3.7", default-features = false }

[dev-dependencies]
pgrx-tests = { git = "https://github.com/luxms/pgrx", version = "0.15.0" }

[build-dependencies]
anyhow = { version = "1.0", default-features = false }
cargo_toml = "0.21.0"
shadow-rs = "=0.38.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.rust]
warnings = 'deny'
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[lints.clippy]
unwrap_used = 'deny'
expect_used = 'deny'
panic = 'deny'
indexing_slicing = 'deny'
dbg_macro = 'deny'
join_absolute_paths = 'deny'
needless_collect = 'deny'
option_env_unwrap = 'deny'
panicking_unwrap = 'deny'
serde_api_misuse = 'deny'
transmute_ptr_to_ref = 'deny'
transmute_undefined_repr = 'deny'
trivially_copy_pass_by_ref = 'deny'
uninit_vec = 'deny'
unnecessary_box_returns = 'deny'
undocumented_unsafe_blocks = 'deny'
